--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Proyecto Empresa A</title>
 </head>
 <body>
-    
+    <p>
+        <ul>
+            <li>git init: Iniciamos git.</li>
+            <li>git add "nombre del archivo": Para añadir el archivo a git.</li>
+            <li>git commit -m "Nombre que queremos poner": Para registar el proyecto en un determinado punto.</li>
+            <li>git status -s: Para ver el estado actual del Proyecto.</li>
+            <li>git log --oneline: Para ver los registros totales.</li>
+            <li>git reset --hard "numero de captura": Para restaurar a un punto anterior.</li>
+        </ul>
+    </p>
 </body>
 </html>
