Parrafo y color de página

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Empresa A</title>
+    <link href="./css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <p>
@@ -14,6 +15,7 @@
             <li>git status -s: Para ver el estado actual del Proyecto.</li>
             <li>git log --oneline: Para ver los registros totales.</li>
             <li>git reset --hard "numero de captura": Para restaurar a un punto anterior.</li>
+            <li>git add . : Para agregar todos los archivos a git</li>
         </ul>
     </p>
 </body>
