Color y letra cambiados

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto Empresa A</title>
+    <title>Comando de Git</title>
     <link href="./css/estilos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <p>
+        <h1>Comando de GIT</h1>
         <ul>
             <li>git init: Iniciamos git.</li>
             <li>git add "nombre del archivo": Para añadir el archivo a git.</li>
