--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <li>git log --oneline: Para ver los registros totales.</li>
             <li>git reset --hard "numero de captura": Para restaurar a un punto anterior.</li>
             <li>git add . : Para agregar todos los archivos a git</li>
+            <li>git commit -ammend: Para abrir el edit Vim</li>
         </ul>
     </p>
 </body>
