--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
             <li>git commit -ammend: Para abrir el edit Vim</li>
         </ul>
     </p>
+    <p>
+        Nuevo parrafo para más datos:
+    </p>
 </body>
 </html>
