--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <li>git reset --hard "numero de captura": Para restaurar a un punto anterior.</li>
             <li>git add . : Para agregar todos los archivos a git</li>
             <li>git commit -ammend: Para abrir el edit Vim</li>
+            <li>git remote add origin "ruta de nuestro Github": Crea el archivo en Github</li>
+            <li>git branch -M main: Escoge la rama principal</li>
+            <li>git push -u origin main: Sube el archivo a Github</li>
+            <li>git pull: Descarga nuestro archivo con modificaciones desde Github</li>
         </ul>
     </p>
     <p>
